2012-01-03  Ulrich Drepper  <drepper@gmail.com>

	* iconv/loop.c (single loop): Fix assertion in storing of
	remaining bytes.

	* posix/regcomp.c (init_word_char): Optimize a bit for sane encodings.

2012-01-01  Ulrich Drepper  <drepper@gmail.com>

	* posix/getconf.c: Update copyright year.
	* nss/getent.c: Likewise.
	* nss/makedb.c: Likewise.
	* iconv/iconvconfig.c: Likewise.
	* iconv/iconv_prog.c: Likewise.
	* elf/ldconfig.c: Likewise.
	* elf/pldd.c: Likewise.
	* elf/sotruss.ksh: Likewise.
	* catgets/gencat.c: Likewise.
	* csu/version.c: Likewise.
	* elf/ldd.bash.in: Likewise.
	* elf/sprof.c (print_version): Likewise.
	* locale/programs/locale.c: Likewise.
	* locale/programs/localedef.c: Likewise.
	* login/programs/pt_chown.c: Likewise.
	* nscd/nscd.c (print_version): Likewise.
	* debug/xtrace.sh: Likewise.
	* malloc/memusage.sh: Likewise.
	* malloc/mtrace.pl: Likewise.
	* debug/catchsegv.sh: Likewise.

2011-12-30  Jakub Jelinek  <jakub@redhat.com>

	* posix/regex_internal.c (re_string_fetch_byte_case): Remove
	pure attribute.

2011-12-24  Ulrich Drepper  <drepper@gmail.com>

	* iconv/gconv_simple.c: Add ASCII<->UTF-16 transformations.
	* iconv/gconv_builtin.h: Add entries for internal ASCII<->UTF-16
	transformations.
	* iconv/gconv_int.h: Likewise.
	* wcsmbs/Makefile (routines): Add mbrtoc16 and c16rtomb.
	* wcsmbs/Versions: Export mbrtoc16, c16rtomb, mbrtoc32, c32rtomb
	from libc for GLIBC_2.16.
	* wcsmbs/mbrtowc.c: Define mbrtoc32 alias.
	* wcsmbs/wcrtomb.c: Define c32rtomb alias.
	* wcsmbs/uchar.h: Really define mbstate_t.
	* wcsmbs/wchar.h: Allow defining mbstate_t in uchar.h.
	* wcsmbs/c16rtomb.c: New file.
	* wcsmbs/mbrtoc16.c: New file.
	* wcsmbs/wcsmbsload.c: Add static definitions for c16 conversions
	for C/POSIX locale.
	(__wcsmbs_load_conv): Do not fill in c16 routines yet.
	* wcsmbs/wcsmbsload.h (gconv_fcts): Add entries for c16 routines.

	* wcsmbs/wchar.h: Add missing __restrict.

2011-12-23  Ulrich Drepper  <drepper@gmail.com>

	[BZ #13532]