@@ -1,3 +1,10 @@
+2012-01-06  Joseph Myers  <joseph@codesourcery.com>
+
+	[BZ #13566]
+	* assert/assert.h (static_assert): Don't define for C++.
+	* libio/stdio.h (gets): Do declare for C++ <= C++11.
+	* wcsmbs/uchar.h (char16_t, char32_t): Don't typedef for C++11.
+
 2012-01-03  Ulrich Drepper  <drepper@gmail.com>
 
 	* iconv/loop.c (single loop): Fix assertion in storing of
